--- a/app/src/main/res/layout/cart_cardview.xml
+++ b/app/src/main/res/layout/cart_cardview.xml
@@ -16,8 +16,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@color/md_theme_secondary">
+            android:background="@color/md_theme_onSecondaryContainer"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -30,7 +30,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:hint="NOM" />
+                    android:hint="NOM"
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:id="@+id/cognomText"
@@ -38,7 +39,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="20dp"
-                    android:hint="COGNOM" />
+                    android:hint="COGNOM"
+                    android:textColor="@color/white" />
             </LinearLayout>
 
             <LinearLayout
@@ -52,7 +54,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:hint="EMAIL" />
+                    android:hint="EMAIL"
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:id="@+id/telefText"
@@ -60,40 +63,70 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="20dp"
-                    android:hint="TELEFON" />
+                    android:hint="TELEFON"
+                    android:textColor="@color/white" />
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_gravity="center"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="15dp"
-            android:layout_marginTop="16dp">
+            android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/dataInici"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:hint="DATA INICI"
-                android:id="@+id/dataInici"/>
+                android:textAlignment="textEnd"
+                android:textColor="@color/black" />
+
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="-"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/dataFinal"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:hint="DATA FINAL"
-                android:id="@+id/dataFinal"/>
+                android:textColor="@color/black" />
 
         </LinearLayout>
-        <TextView
-            android:layout_width="160dp"
-            android:layout_height="50dp"
-            android:hint="PREU"
-            android:textSize="36sp"
-            android:layout_gravity="end"
-            android:id="@+id/preuText"
-            android:textAlignment="textEnd"
-            android:layout_marginEnd="15dp"/>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:gravity="end"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/preuText"
+                android:layout_width="160dp"
+                android:layout_height="50dp"
+                android:layout_gravity="end"
+                android:layout_marginEnd="10dp"
+                android:hint="PREU"
+                android:textAlignment="textEnd"
+                android:textColor="@color/black"
+                android:textSize="36sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_marginEnd="15dp"
+                android:text="€"
+                android:textColor="@color/black"
+                android:textSize="36sp" />
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
