--- a/app/src/main/res/layout/activitats_carousel.xml
+++ b/app/src/main/res/layout/activitats_carousel.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.carousel.MaskableFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/maskableFL"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:foreground="?attr/selectableItemBackground">
-<!--    app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">-->
-
-
+    <!--    app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">-->
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="bottom">
+        android:gravity="bottom"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/ivCarousel"
@@ -28,10 +25,10 @@
             android:id="@+id/nom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="16sp"
             android:layout_gravity="center"
-            android:fontFamily="@font/dm_sans"/>
+            android:fontFamily="@font/dm_sans"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </com.google.android.material.carousel.MaskableFrameLayout>
