--- a/app/src/main/res/layout/serveis_carousel.xml
+++ b/app/src/main/res/layout/serveis_carousel.xml
@@ -8,8 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="bottom">
+        android:gravity="bottom"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/serveis_image"
@@ -22,10 +22,10 @@
             android:id="@+id/nom_servei"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="16sp"
             android:layout_gravity="center"
-            android:fontFamily="@font/dm_sans"/>
+            android:fontFamily="@font/dm_sans"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </com.google.android.material.carousel.MaskableFrameLayout>
